# Langhainrevise

./: .env  pyproject.toml  requirements.txt
vectordb/: vector.py
